src/test/ui/feature-gates/feature-gate-const_generics-ptr.stderr
error[E0658]: const generics are unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:1:22
   |
LL | struct ConstFn<const F: fn()>;
   |                      ^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: const generics are unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:5:23
   |
LL | struct ConstPtr<const P: *const u32>;
   |                       ^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics)]` to the crate attributes to enable

error[E0658]: using function pointers as const generic parameters is unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:1:25
   |
LL | struct ConstFn<const F: fn()>;
   |                         ^^^^
   |
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information
   = help: add `#![feature(const_compare_raw_pointers)]` to the crate attributes to enable

error[E0741]: the types of const generic parameters must derive `PartialEq` and `Eq`
  --> $DIR/feature-gate-const_generics-ptr.rs:1:25
   |
LL | struct ConstFn<const F: fn()>;
   |                         ^^^^ `fn()` doesn't derive both `PartialEq` and `Eq`

error[E0658]: using raw pointers as const generic parameters is unstable
  --> $DIR/feature-gate-const_generics-ptr.rs:5:26
   |
LL | struct ConstPtr<const P: *const u32>;
   |                          ^^^^^^^^^^
   |
   = note: see issue #53020 <https://github.com/rust-lang/rust/issues/53020> for more information
   = help: add `#![feature(const_compare_raw_pointers)]` to the crate attributes to enable

error[E0741]: the types of const generic parameters must derive `PartialEq` and `Eq`
  --> $DIR/feature-gate-const_generics-ptr.rs:5:26
   |
LL | struct ConstPtr<const P: *const u32>;
   |                          ^^^^^^^^^^ `*const u32` doesn't derive both `PartialEq` and `Eq`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0658, E0741.
For more information about an error, try `rustc --explain E0658`.
